src/test/deca/context/invalid/extends_on_type_int.deca
//Test contextuellement invalide : on ne peut faire extends que sur des class

//Resultat : extends_on_type_int.deca:5:0: extends can be applied only to classes

class A extends boolean{

}